--- a/src/componentes/Formulario/formulario.css
+++ b/src/componentes/Formulario/formulario.css
@@ -1,11 +1,13 @@
 .formulario-container {
     display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
     justify-content: center;
-    margin: 80px 0;
+    margin: 80px 50px;
 
 }
 .formulario-container .formulario {
-    max-width: 80%;
+    flex: 1;
     background: #F7F7F7;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
